Changing location of index file for gh-pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="sarmenu.html" title="sarmenu">examples</a>
+                    <a href="docs/examples/sarmenu.html" title="sarmenu">examples</a>
                 </li>
             </ul>
         </nav>
