Added more examples, build file should pick up any files in the src dir now

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         </header>
         <nav>
             <ul>
-                <li>
-                    <a href="docs/examples/sarmenu.html" title="sarmenu">examples</a>
-                </li>
+                <li><a href="docs/examples/sarmenu.html" title="sarmenu">Simple Example</a></li>
+                <li><a href="docs/examples/twomenus.html" title="two menus">Two Menus</a></li>
             </ul>
         </nav>
     </div>
